# acousea-backend

./: .gitignore  README.md  pyproject.toml  system.sqlite
apps/communication/: main_client.py
apps/communication/communication_requests/: communication_request.py
apps/communication/communication_responses/: communication_response.py
apps/communication/communicator/: address.py  communicator.py  operation_codes.py  serial_communicator.py
apps/communication/iclisten_client/: ICListenClient.py
apps/rest_api/: dependencies.py  main.py  tests.py
apps/rest_api/v1/: communication_system.py  device_info.py  iclisten.py  notifications.py  operation_modes.py  pam_system.py  ping.py  rockblock.py  stats.py  surface_fields.py
core/communication_system/domain/: OperationMode.py  reporting_periods.py  rockblock_message.py  rockblock_message_mother.py
core/communication_system/infrastructure/: communication_system_client.py  communication_system_request_handler.py  request_logger_service.py  rockblock_messages_repository.py  sqlite_communication_system_query_repository.py
core/iclisten/domain/: device_info_mother.py  device_info_read_model.py  iclisten_device_info_mother.py  iclisten_device_info_read_model.py  job_setup_read_model.py  pam_system_logging_config_read_model.py  pam_system_status_info_mother.py  pam_system_status_info_read_model.py  pam_system_streaming_config_read_model.py  recording_stats.py  recording_stats_read_model.py
core/iclisten/infrastructure/: iclisten_request_handler.py  mock_iclisten_repository.py  (+3 more)
data_backend/: process.py
(+171 files in other folders)
